--- a/dummyrecords.ipynb
+++ b/dummyrecords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,7 @@
     "        patient['emergency_contact'] = fake.emergency_contact()\n",
     "        patient['insurance_info'] = fake.insurance_info()\n",
     "        patient['health_info'] = fake.health_info()\n",
+    "        patient['physician_info'] = fake.physician_info()\n",
     "        patient_list.append(patient)\n",
     "    return pd.DataFrame(patient_list)"
    ]
